[gd_scene load_steps=16 format=3 uid="uid://b8vt3p3d4rbl7"]

[ext_resource type="Script" path="res://scenes/enemies/slime_enemy.gd" id="1_ehs43"]
[ext_resource type="Texture2D" uid="uid://djdsh8tue61at" path="res://art/slime.png" id="1_gefyt"]
[ext_resource type="PackedScene" uid="uid://vr6ikbrw81ea" path="res://damage_hitbox.tscn" id="3_f8d5r"]
[ext_resource type="Script" path="res://code/util/DamageHurtbox.gd" id="4_7qo8f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ovq7x"]
atlas = ExtResource("1_gefyt")
region = Rect2(1, 12, 23, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_aivyp"]
atlas = ExtResource("1_gefyt")
region = Rect2(73, 12, 23, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtuev"]
atlas = ExtResource("1_gefyt")
region = Rect2(25, 12, 23, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5yx8"]
atlas = ExtResource("1_gefyt")
region = Rect2(73, 12, 23, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_poix2"]
atlas = ExtResource("1_gefyt")
region = Rect2(49, 12, 23, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcvc0"]
atlas = ExtResource("1_gefyt")
region = Rect2(1, 23, 23, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_meqy5"]
atlas = ExtResource("1_gefyt")
region = Rect2(25, 23, 23, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_gqob0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovq7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aivyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtuev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5yx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_poix2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcvc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meqy5")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_is8qi"]
radius = 4.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kgsg3"]
size = Vector2(16, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2divv"]
size = Vector2(20, 9)

[node name="SlimeEnemy" type="CharacterBody2D"]
script = ExtResource("1_ehs43")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gqob0")
animation = &"die"
frame = 1
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_is8qi")

[node name="RightRay" type="RayCast2D" parent="."]
target_position = Vector2(20, 0)

[node name="LeftRay" type="RayCast2D" parent="."]
target_position = Vector2(-20, 0)

[node name="RightDownRay" type="RayCast2D" parent="."]
position = Vector2(11, 5)
target_position = Vector2(0, 25)

[node name="LeftDownRay" type="RayCast2D" parent="."]
position = Vector2(-12, 5)
target_position = Vector2(0, 25)

[node name="DamageHitbox" parent="." groups=["enemy_attack"] instance=ExtResource("3_f8d5r")]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" parent="DamageHitbox" index="0"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_kgsg3")

[node name="DamageHurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
script = ExtResource("4_7qo8f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageHurtbox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_2divv")

[connection signal="damage_received" from="DamageHurtbox" to="." method="_on_damage_hurtbox_damage_received"]

[editable path="DamageHitbox"]
